--- a/hase_node/package.xml
+++ b/hase_node/package.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0"?>
 <package>
-  <name>ros_hase_driver</name>
-  <version>0.0.1</version>
-  <description>The ros_hase_driver package</description>
-
-  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
-
-  <license>BSD</license>
-
+  <name>hase_node</name>
+  <version>0.0.0</version>
+  <description>
+     ROS node for Hase: ROS wrapper for the Hase driver.
+  </description>
   <author email="garyservin@gmail.com">Gary Servin</author>
+  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
+  <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
 
-  <run_depend>geometry_msgs</run_depend>
+  <build_depend>hase_driver</build_depend>
+
   <run_depend>roscpp</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
 
-  <export>
-  </export>
+  <run_depend>hase_driver</run_depend>
+
 </package>
