Added executable to hase_node node

--- a/hase_node/src/node/CMakeLists.txt
+++ b/hase_node/src/node/CMakeLists.txt
@@ -2,7 +2,8 @@
 # NODE
 ##############################################################################
 
-add_library(hase_node hase_node.cpp)
+#add_library(hase_node hase_node.cpp)
+add_executable(hase_node hase_node.cpp)
 add_dependencies(hase_node hase_ros)
 target_link_libraries(hase_node hase_ros)
 
