--- a/hase_node/package.xml
+++ b/hase_node/package.xml
@@ -3,7 +3,7 @@
   <name>hase_node</name>
   <version>0.0.0</version>
   <description>
-     ROS node for Hase: ROS wrapper for the Hase driver.
+      Hase Robot ROS Node: ROS wrapper for the Hase driver.
   </description>
   <author email="garyservin@gmail.com">Gary Servin</author>
   <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
@@ -14,13 +14,10 @@
   <build_depend>roscpp</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-
   <build_depend>hase_driver</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-
   <run_depend>hase_driver</run_depend>
-
 </package>
