--- a/hase_driver/package.xml
+++ b/hase_driver/package.xml
@@ -3,7 +3,7 @@
   <name>hase_driver</name>
   <version>0.0.0</version>
   <description>
-    C++ driver library for Hase:
+    C++ driver library for Hase
   </description>
 
   <author email="garyservin@gmail.com">Gary Servin</author>
@@ -12,5 +12,4 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-
 </package>
