--- a/hase_firmware/CMakeLists.txt
+++ b/hase_firmware/CMakeLists.txt
@@ -10,16 +10,15 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
 )
 
-add_message_files(
-  FILES
-  OdometryLite.msg
-)
+#add_message_files(
+#  FILES
+#)
 
-generate_messages(
-  DEPENDENCIES
-  geometry_msgs
-  std_msgs
-)
+#generate_messages(
+#  DEPENDENCIES
+#  geometry_msgs
+#  std_msgs
+#)
 
 catkin_package(
   CATKIN_DEPENDS geometry_msgs message_generation message_runtime rospy roscpp std_msgs
@@ -27,4 +26,14 @@ catkin_package(
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
+)
+
+add_executable(add_covariance_twist src/helper/add_covariance_twist.cpp)
+
+target_link_libraries(add_covariance_twist
+  ${catkin_LIBRARIES}
+)
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
