--- a/hase_firmware/CMakeLists.txt
+++ b/hase_firmware/CMakeLists.txt
@@ -10,15 +10,16 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
 )
 
-#add_message_files(
-#  FILES
-#)
+add_message_files(
+  FILES
+  ImuLite.msg
+)
 
-#generate_messages(
-#  DEPENDENCIES
-#  geometry_msgs
-#  std_msgs
-#)
+generate_messages(
+  DEPENDENCIES
+  geometry_msgs
+  std_msgs
+)
 
 catkin_package(
   CATKIN_DEPENDS geometry_msgs message_generation message_runtime rospy roscpp std_msgs
