Fixed node for adding covariances and launchfile

--- a/hase_firmware/CMakeLists.txt
+++ b/hase_firmware/CMakeLists.txt
@@ -3,9 +3,9 @@ project(hase_firmware)
 
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
+  sensor_msgs
   message_generation
   message_runtime
-  rospy
   roscpp
   std_msgs
 )
@@ -18,20 +18,27 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
   geometry_msgs
+  sensor_msgs
   std_msgs
 )
 
 catkin_package(
-  CATKIN_DEPENDS geometry_msgs message_generation message_runtime rospy roscpp std_msgs
+  CATKIN_DEPENDS
+  geometry_msgs
+  sensor_msgs
+  std_msgs
+  message_generation
+  message_runtime
+  roscpp
 )
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(add_covariance_twist src/helper/add_covariance_twist.cpp)
+add_executable(add_covariances src/helper/add_covariances.cpp)
 
-target_link_libraries(add_covariance_twist
+target_link_libraries(add_covariances
   ${catkin_LIBRARIES}
 )
 
