--- a/hase_node/package.xml
+++ b/hase_node/package.xml
@@ -17,9 +17,11 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>hase_driver</build_depend>
+  <build_depend>hase_firmware</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>hase_driver</run_depend>
+  <run_depend>hase_firmware</run_depend>
 </package>
