--- a/hase_base/package.xml
+++ b/hase_base/package.xml
@@ -13,6 +13,7 @@
   <build_depend>controller_manager</build_depend>
   <build_depend>hardware_interface</build_depend>
   <build_depend>hase_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>realtime_tools</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>roslaunch</build_depend>
@@ -24,6 +25,7 @@
   <run_depend>diff_drive_controller</run_depend>
   <run_depend>hase_description</run_depend>
   <run_depend>hase_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
   <run_depend>realtime_tools</run_depend>
   <run_depend>rosserial_python</run_depend>
   <run_depend>rosserial_server</run_depend>
