Fix some lint issues on CMakeLists.txt

--- a/hase_base/CMakeLists.txt
+++ b/hase_base/CMakeLists.txt
@@ -1,27 +1,45 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(hase_base)
 
-find_package(catkin REQUIRED COMPONENTS
-  controller_manager hardware_interface hase_msgs realtime_tools
-  roscpp roslaunch roslint rosserial_server std_msgs sensor_msgs)
+find_package(
+  catkin REQUIRED COMPONENTS
+    controller_manager
+    hardware_interface
+    hase_msgs
+    realtime_tools
+    roscpp
+    roslaunch
+    roslint
+    rosserial_server
+    sensor_msgs
+    std_msgs
+)
 
 find_package(Boost REQUIRED COMPONENTS thread chrono)
 
 catkin_package(
-  CATKIN_DEPENDS hase_msgs sensor_msgs
+  CATKIN_DEPENDS
+    hase_msgs
+    sensor_msgs
 )
 
 include_directories(include ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
-add_executable(hase_node
-   src/hase_base.cpp
-   src/hase_hardware.cpp)
+add_executable(
+  hase_node
+    src/hase_base.cpp
+    src/hase_hardware.cpp
+)
 
-target_link_libraries(hase_node ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-add_dependencies(hase_node hase_msgs_gencpp rosserial_msgs_gencpp)
+target_link_libraries(
+  hase_node
+    ${catkin_LIBRARIES}
+    ${Boost_LIBRARIES}
+)
 
 install(TARGETS hase_node
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 roslaunch_add_file_check(launch/base.launch)
 roslint_cpp()
